--- a/package.json
+++ b/package.json
@@ -3,27 +3,35 @@
   "version": "1.0.0",
   "description": "*首页/注册/登录/详情页/购物车",
   "main": "index.js",
+  "dependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1" 
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.6.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-rev": "^9.0.0",
+    "gulp-rev-collector": "^1.3.1",
+    "gulp-uglify": "^3.0.1",
+    "gulp-watch": "^5.0.1",
+    "run-sequence": "^2.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hannahjx/MEIZU.git"
+    "url": "git+https://github.com/qizhi522/shopcar.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hannahjx/MEIZU/issues"
+    "url": "https://github.com/qizhi522/shopcar/issues"
   },
-  "homepage": "https://github.com/hannahjx/MEIZU#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.6.1",
-    "gulp-rev": "^9.0.0",
-    "gulp-uglify": "^3.0.1"
-  },
-  "dependencies": {
-    "gulp-rev-collector": "^1.3.1"
-  }
+  "homepage": "https://github.com/qizhi522/shopcar#readme"
 }
